revisión de la sección de cursos

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                             <li>
                                 <strong><i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>
                                     Tarea práctica</strong></li>
-                            <li class="text-muted"><i class="fa fa-square-o" aria-hidden="true"></i>
+                            <li class="text-muted"><i class="fa fa-square-o mr-2" aria-hidden="true"></i>
                                 Seguimiento y resolución de dudas</li>
-                            <li class="text-muted"><i class="fa fa-square-o" aria-hidden="true"></i>
+                            <li class="text-muted"><i class="fa fa-square-o mr-2" aria-hidden="true"></i>
                                 Tutorías en Streaming y presenciales</li>
-                            <li class="text-muted"><i class="fa fa-square-o" aria-hidden="true"></i>
+                            <li class="text-muted"><i class="fa fa-square-o mr-2" aria-hidden="true"></i>
                                 Revisión y corrección de actividades</li>
-                            <li class="text-muted"><i class="fa fa-square-o" aria-hidden="true"></i>
+                            <li class="text-muted"><i class="fa fa-square-o mr-2" aria-hidden="true"></i>
                                 Certificación</li>
                         </ul>
                         <button type="button" class="btn btn-lg btn-block btn-outline-warning">Formación básica</button>
@@ -123,7 +123,7 @@
                                 Tutorías en Streaming y presenciales</li>
                             <li><i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>
                                 Revisión y corrección de actividades</li>
-                            <li class="text-muted">Certificación</li>
+                            <li class="text-muted"><i class="fa fa-square-o mr-2" aria-hidden="true"></i>Certificación</li>
                         </ul>
                         <button type="button" class="btn btn-lg btn-block btn-warning">Formación personalizada</button>
                     </div>
@@ -160,7 +160,7 @@
         <div class="container-fluid">
             <h2 class="text-center">Sobre Nosotros</h2>
             <p>Encuentra formadores de calidad, que priorizan las personas y que te ayudarán
-                a lograr tus objetivos ofreciéndote una perspectiva desde la experiencia profesional.</p>
+                a lograr tus objetivos, ofreciéndote una perspectiva desde la experiencia profesional.</p>
             <div class="row my-5">
                 <div class="col-sm-4 pb-3">
                     <div class="card" style="width: 18rem;">
